--- a/test2.ipynb
+++ b/test2.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/mjg-phys/cdm-computing-subgroup/blob/main/test2.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This is a test file\n",
     "\n"
    ]
