Removing dependencies examples

--- a/advancedPythonTutorial/nuisance/notebooks/slow_example.ipynb
+++ b/advancedPythonTutorial/nuisance/notebooks/slow_example.ipynb
@@ -21,8 +21,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from multiprocessing import Pool\n",
-    "from tqdm import tqdm\n",
-    "from numba import njit"
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -45,7 +44,6 @@
    "outputs": [],
    "source": [
     "# Basic functions\n",
-    "@njit\n",
     "def mass_diff_mat(i: int, j: int, matrix: np.array) -> float:\n",
     "    \"\"\" Fetches the mass differences from the mass matrix\n",
     "\n",
