--- a/advancedPythonTutorial/nuisance/notebooks/speed_tests.ipynb
+++ b/advancedPythonTutorial/nuisance/notebooks/speed_tests.ipynb
@@ -13,21 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from numba import njit\n",
-    "import timeit\n",
-    "\n",
-    "import jax\n",
-    "import jax.numpy as jnp"
+    "import timeit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,15 +137,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22.070774467999968\n",
-      "4.8891000005824026e-05\n"
+      "21.644977496005595\n",
+      "5.574498209170997e-05\n"
      ]
     }
    ],
