--- a/advancedPythonTutorial/nuisance/notebooks/speedy.ipynb
+++ b/advancedPythonTutorial/nuisance/notebooks/speedy.ipynb
@@ -6,9 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# speed_tests.ipynb\n",
+    "# speedy.ipynb\n",
     "# Authors: Stephan Meighen-Berger\n",
     "# Testing different rotation implementations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/mjg-phys/cdm-computing-subgroup/blob/main/advancedPythonTutorial/nuisance/notebooks/speedy.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n"
    ]
   },
   {
