--- a/advancedPythonTutorial/nuisance/notebooks/speed_tests.ipynb
+++ b/advancedPythonTutorial/nuisance/notebooks/speed_tests.ipynb
@@ -85,7 +85,7 @@
     "                elif row == col == i or row == col == j:\n",
     "                    R[row, col] = np.cos(ang)\n",
     "                else:\n",
-    "                    R[row, col] = 0.0\n",
+    "                    continue  # AI had R[row, col] = 0.0\n",
     "    else:\n",
     "        for row in range(dim):\n",
     "            for col in range(dim):\n",
@@ -96,7 +96,7 @@
     "                elif row == col == i or row == col == j:\n",
     "                    R[row, col] = np.cos(ang)\n",
     "                else:\n",
-    "                    R[row, col] = 0.0\n",
+    "                    continue  # AI had R[row, col] = 0.0\n",
     "    return R\n",
     "\n",
     "def buildmixingmatrix_inefficient(params: np.ndarray) -> np.ndarray:\n",
