--- a/advancedPythonTutorial/nuisance/notebooks/basic_example.ipynb
+++ b/advancedPythonTutorial/nuisance/notebooks/basic_example.ipynb
@@ -12,6 +12,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/mjg-phys/cdm-computing-subgroup/blob/main/advancedPythonTutorial/nuisance/notebooks/basic_example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -21,7 +28,10 @@
     "import sys\n",
     "sys.path.append(\"../\")\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "# Installing the package\n",
+    "%pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ nuisance==1.0.2"
    ]
   },
   {
