--- a/advancedPythonTutorial/nuisance/notebooks/basic_example.ipynb
+++ b/advancedPythonTutorial/nuisance/notebooks/basic_example.ipynb
@@ -198,7 +198,7 @@
     "axs[2].set_title(r'$\\nu_\\mu\\rightarrow \\nu_\\tau$')\n",
     "# ------------------------------------------------------------------------------\n",
     "# Saving\n",
-    "plt.savefig('../pics/oscillation_slices.png', dpi=250)"
+    "# plt.savefig('../pics/oscillation_slices.png', dpi=250)"
    ]
   },
   {
@@ -265,7 +265,7 @@
     "plt.colorbar(pc)\n",
     "# ------------------------------------------------------------------------------\n",
     "# Saving\n",
-    "plt.savefig('../pics/oscillation_picture.png', dpi=250)"
+    "# plt.savefig('../pics/oscillation_picture.png', dpi=250)"
    ]
   },
   {
