Added Colab, removed outputs

--- a/MLTutorial/NNtutorial.ipynb
+++ b/MLTutorial/NNtutorial.ipynb
@@ -42,7 +42,8 @@
         "import glob\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "%matplotlib inline"
+        "%matplotlib inline\n",
+        "#edit"
       ]
     },
     {
