--- a/MLTutorial/ExploreLHCDataset.ipynb
+++ b/MLTutorial/ExploreLHCDataset.ipynb
@@ -6,7 +6,7 @@
         "id": "exn3KhROYV3W"
       },
       "source": [
-        "<a href=\"https://github.com/mjg-phys/cdm-computing-subgroup/tree/main/MLTutorial/ExploreLHCDataset.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mjg-phys/cdm-computing-subgroup/blob/main/MLTutorial/ExploreLHCDataset.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
