--- a/MLTutorial/NNtutorial.ipynb
+++ b/MLTutorial/NNtutorial.ipynb
@@ -580,7 +580,7 @@
         "id": "BidazkvH4yJd"
       },
       "source": [
-        "# Optional Challenge: Adding Callbacks\n",
+        "# Optional Challenge 1: Adding Callbacks\n",
         "\n",
         "At the moment, we have no extra conditions on our training. What if we are running our network for 100 epochs but we get no improvement after the first 10? It would be a waste of compute time (and our time) to continue to train.\n",
         "\n",
