--- a/mini-workshops/ML_architectures/CDM_particleImageClassifier_clean.ipynb
+++ b/mini-workshops/ML_architectures/CDM_particleImageClassifier_clean.ipynb
@@ -828,7 +828,7 @@
         "from sklearn.metrics import roc_curve, auc\n",
         "from sklearn.preprocessing import label_binarize\n",
         "\n",
-        "particleTypes = [\"muon\", \"electron\", \"photon\", \"proton\"]\n",
+        "particleTypes = [\"electron\", \"muon\", \"photon\", \"proton\"]\n",
         "def plot_roc_curve(y_true, y_pred_prob):\n",
         "    # Binarize the labels\n",
         "    y_true_binarized = label_binarize(y_true, classes=[0, 1, 2, 3])\n",
